sets web.config

--- a/Jarvis/Web.config
+++ b/Jarvis/Web.config
@@ -6,9 +6,9 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="BotId" value="Jarvis" />
+    <add key="MicrosoftAppId" value="842b5648-04ac-4a1d-8d8f-6c7f3590f35b" />
+    <add key="MicrosoftAppPassword" value="Uo453KQgQgnKS9oo8vED6yP" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
