--- a/Jarvis/Jarvis.csproj
+++ b/Jarvis/Jarvis.csproj
@@ -75,6 +75,14 @@
       <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Octokit, Version=0.23.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Octokit.0.23.0\lib\net45\Octokit.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.105.2.3\lib\net46\RestSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.IdentityModel.Tokens.Jwt, Version=4.0.20622.1351, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.4.0.2.206221351\lib\net45\System.IdentityModel.Tokens.Jwt.dll</HintPath>
@@ -119,10 +127,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\GetConfigExecutor.cs" />
+    <Compile Include="Controllers\GithubIssuesExecutor.cs" />
+    <Compile Include="Controllers\IIntentExecutor.cs" />
+    <Compile Include="Controllers\IntentExecutorAttribute.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
+    <Compile Include="Controllers\ProjectInfoExecutor.cs" />
+    <Compile Include="Controllers\PurgeCacheExecutor.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Model\Action.cs" />
+    <Compile Include="Model\CompositeEntity.cs" />
+    <Compile Include="Model\CompositeEntityChild.cs" />
+    <Compile Include="Model\Dialog.cs" />
+    <Compile Include="Model\DialogStatus.cs" />
+    <Compile Include="Model\Entity.cs" />
+    <Compile Include="Model\Intent.cs" />
+    <Compile Include="Model\LuisResult.cs" />
+    <Compile Include="Model\Parameter.cs" />
+    <Compile Include="Model\ParameterValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
