--- a/Jarvis/packages.config
+++ b/Jarvis/packages.config
@@ -11,5 +11,7 @@
   <package id="Microsoft.Rest.ClientRuntime" version="1.8.2" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="Octokit" version="0.23.0" targetFramework="net46" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net46" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net46" />
 </packages>
